--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span :class="effect">{{ message }}</span>
             </h1>
             <div>
-                <img id="img" class="my-3"  alt="">
+                <img id="img" class="my-3" v-bind:src="percorso" alt="">
             </div>
         </div>
     </div>
